# InterFondos

./: pyproject.toml
.github/workflows/: data.yml
InterFondos/interbank/: extract_funds_0exists.py  extract_funds_data.py
data/interbank/: interfondos_funds_name.csv
